[22445] added checking of bands nodata inside AOI

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -49,6 +49,8 @@
     "import uuid\n",
     "import json\n",
     "import geojson\n",
+    "from pathlib import Path\n",
+    "import shutil\n",
     "\n",
     "from geojson import Feature\n",
     "\n",
@@ -109,14 +111,14 @@
    },
    "outputs": [],
    "source": [
-    "REQUEST_ID=os.getenv('REQUEST_ID')\n",
-    "START_DATE=os.getenv('START_DATE')\n",
-    "END_DATE=os.getenv('END_DATE')\n",
-    "AOI=os.getenv('AOI')\n",
+    "REQUEST_ID=os.getenv('REQUEST_ID', '1')\n",
+    "START_DATE=os.getenv('START_DATE', '2023-04-01')\n",
+    "END_DATE=os.getenv('END_DATE', '2023-06-01')\n",
+    "AOI=os.getenv('AOI', \"POLYGON ((8.753357000000001 53.17327900000003, 8.753357000000001 53.179556, 8.762797999999998 53.179556, 8.762797999999998 53.17327900000003, 8.753357000000001 53.17327900000003))\")\n",
     "\n",
-    "SENTINEL2_GOOGLE_API_KEY=os.getenv('SENTINEL2_GOOGLE_API_KEY')\n",
-    "SATELLITE_CACHE_FOLDER=os.getenv('SENTINEL2_CACHE')\n",
-    "OUTPUT_FOLDER=os.getenv('OUTPUT_FOLDER')"
+    "SENTINEL2_GOOGLE_API_KEY=os.getenv('SENTINEL2_GOOGLE_API_KEY', 'sentinel2_google_api_key.json')\n",
+    "SATELLITE_CACHE_FOLDER=os.getenv('SENTINEL2_CACHE', 'cache')\n",
+    "OUTPUT_FOLDER=os.getenv('OUTPUT_FOLDER', 'output')"
    ]
   },
   {
@@ -139,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d1945c",
+   "id": "00d27875",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-11-12T16:40:09.480068Z",
@@ -232,9 +234,14 @@
    "source": [
     "LOAD_DIR = SATELLITE_CACHE_FOLDER\n",
     "\n",
+    "NODATA = 0 \n",
+    "NODATA_PIXEL_PERCENTAGE = 10.0\n",
+    "CLOUDY_PIXEL_PERCENTAGE = 15.0\n",
+    "\n",
     "PRODUCT_TYPE = 'L2A'\n",
     "BANDS = {'TCI', 'B04', 'B08', }\n",
-    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
+    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': NODATA_PIXEL_PERCENTAGE, \n",
+    "               'CLOUDY_PIXEL_PERCENTAGE': CLOUDY_PIXEL_PERCENTAGE, }\n",
     "\n",
     "LAYERS = ['TCI', 'NDVI', ]"
    ]
@@ -263,7 +270,7 @@
    "source": [
     "def shift_date(date, delta=5, format='%Y-%m-%d'):\n",
     "    date = datetime.strptime(date, format)\n",
-    "    date = date - timedelta(days=delta)    \n",
+    "    date = date + timedelta(days=delta)    \n",
     "    return datetime.strftime(date, format)"
    ]
   },
@@ -287,51 +294,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72d1feab",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:26.457695Z",
-     "iopub.status.busy": "2022-11-12T16:40:26.457247Z",
-     "iopub.status.idle": "2022-11-12T16:40:26.462640Z",
-     "shell.execute_reply": "2022-11-12T16:40:26.461502Z"
-    },
-    "papermill": {
-     "duration": 0.026569,
-     "end_time": "2022-11-12T16:40:26.465499",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:26.438930",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "1c835dc2",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_SHIFT = 30"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7c1cf66",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:26.505037Z",
-     "iopub.status.busy": "2022-11-12T16:40:26.504031Z",
-     "iopub.status.idle": "2022-11-12T16:40:26.510999Z",
-     "shell.execute_reply": "2022-11-12T16:40:26.509567Z"
-    },
-    "papermill": {
-     "duration": 0.033221,
-     "end_time": "2022-11-12T16:40:26.514760",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:26.481539",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "MAX_SHIFT_ITERS = 2"
+    "def check_nodata_percentage_crop(tile_path, \n",
+    "                                 aoi, \n",
+    "                                 nodata_percentage_limit=5, \n",
+    "                                 nodata=0):\n",
+    "        with rasterio.open(tile_path) as src:\n",
+    "            polygon = aoi.to_crs(src.meta['crs']).geometry[0]\n",
+    "            out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True)\n",
+    "            band = out_image[0]\n",
+    "            nodata_count = np.count_nonzero(band == nodata)\n",
+    "            nodata_percentage = round(nodata_count / band.size * 100, 2)\n",
+    "        if nodata_percentage>=nodata_percentage_limit:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False"
    ]
   },
   {
@@ -356,37 +336,51 @@
    },
    "outputs": [],
    "source": [
-    "def load_images(tiles, start_date, end_date):\n",
+    "def load_images(tiles, start_date, end_date, aoi):\n",
     "    loader = Sentinel2Downloader(SENTINEL2_GOOGLE_API_KEY)\n",
     "    loadings = dict()\n",
     "        \n",
     "    for tile in tiles:\n",
-    "        start = start_date\n",
-    "        end = end_date\n",
-    "        \n",
     "        print(f\"Loading images for tile: {tile}...\")\n",
-    "        count = 0\n",
-    "        while count < MAX_SHIFT_ITERS:\n",
-    "            loaded = loader.download(PRODUCT_TYPE,\n",
-    "                                [tile],\n",
-    "                                start_date=start,\n",
-    "                                end_date=end,\n",
-    "                                output_dir=LOAD_DIR,                       \n",
-    "                                bands=BANDS,\n",
-    "                                constraints=CONSTRAINTS)\n",
+    "        loaded = loader.download(PRODUCT_TYPE,\n",
+    "                            [tile],\n",
+    "                            start_date=start_date,\n",
+    "                            end_date=end_date,\n",
+    "                            output_dir=LOAD_DIR,                       \n",
+    "                            bands=BANDS,\n",
+    "                            constraints=CONSTRAINTS)\n",
     "        \n",
-    "            if not loaded:\n",
-    "                end = start_date\n",
-    "                start = shift_date(start_date, delta=MAX_SHIFT) \n",
-    "                print(f\"For tile: {tile} and dates {start_date} {end_date} proper images not found! Shift dates to {start} {end}!\")\n",
-    "            else:\n",
-    "                break\n",
-    "            count += 1\n",
-    "        if loaded:\n",
-    "            loadings[tile] = loaded\n",
+    "        loaded_tile_folders = set([Path(i[0]).parent for i in loaded])\n",
+    "        if not loaded:\n",
+    "            print(f\"Images for tile {tile} were not loaded!\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            remaining_tiles = []\n",
+    "            for loaded_tile_folder in loaded_tile_folders:\n",
+    "                skip_tile = False\n",
+    "                band_paths = [os.path.join(loaded_tile_folder, i) for i in os.listdir(loaded_tile_folder)]\n",
+    "                for band_path in band_paths:\n",
+    "                    if  '.jp2' != Path(band_path).suffix:\n",
+    "                        continue\n",
+    "                    nodata_band = check_nodata_percentage_crop(band_path, \n",
+    "                                                               aoi,\n",
+    "                                                               nodata_percentage_limit=NODATA_PIXEL_PERCENTAGE,\n",
+    "                                                               nodata=NODATA)\n",
+    "                    if nodata_band:\n",
+    "                        skip_tile = True\n",
+    "                if skip_tile:\n",
+    "                    for band_path in band_paths:\n",
+    "                        os.remove(band_path)\n",
+    "                    os.rmdir(loaded_tile_folder) \n",
+    "                else:\n",
+    "                    remaining_tiles += band_paths\n",
+    "        \n",
+    "        if remaining_tiles:\n",
+    "            loadings[tile] = remaining_tiles\n",
     "            print(f\"Loading images for tile {tile} finished\")\n",
     "        else:\n",
-    "            print(f\"Images for tile {tile} were not loaded!\")\n",
+    "            print(f\"All downlaoded images have a lot of nodata in AOI, so they were removed!\")\n",
+    "            \n",
     "        \n",
     "    # tile_folders = dict()\n",
     "    # for tile, tile_paths in loadings.items():\n",
@@ -397,26 +391,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "654d6443",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:26.619554Z",
-     "iopub.status.busy": "2022-11-12T16:40:26.618914Z",
-     "iopub.status.idle": "2022-11-12T16:41:27.030466Z",
-     "shell.execute_reply": "2022-11-12T16:41:27.028822Z"
-    },
-    "papermill": {
-     "duration": 60.457974,
-     "end_time": "2022-11-12T16:41:27.052430",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:26.594456",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "c27c0f56",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "loadings = load_images(overlap_tiles.Name.values, START_DATE, END_DATE)"
+    "loadings = load_images(overlap_tiles.Name.values, START_DATE, END_DATE, aoi)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a9fe808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loadings"
    ]
   },
   {
@@ -475,7 +464,7 @@
     "        try:\n",
     "            last_date = _find_last_date(items)\n",
     "            bands_paths = dict()\n",
-    "            for path, _ in items:\n",
+    "            for path in items:\n",
     "                if last_date in path:\n",
     "                    if 'B04_10m.jp2' in path:\n",
     "                        bands_paths['RED'] = path\n",
