--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -111,14 +111,14 @@
    },
    "outputs": [],
    "source": [
-    "REQUEST_ID=os.getenv('REQUEST_ID', '1')\n",
-    "START_DATE=os.getenv('START_DATE', '2023-04-01')\n",
-    "END_DATE=os.getenv('END_DATE', '2023-06-01')\n",
-    "AOI=os.getenv('AOI', \"POLYGON ((8.753357000000001 53.17327900000003, 8.753357000000001 53.179556, 8.762797999999998 53.179556, 8.762797999999998 53.17327900000003, 8.753357000000001 53.17327900000003))\")\n",
+    "REQUEST_ID=os.getenv('REQUEST_ID')\n",
+    "START_DATE=os.getenv('START_DATE')\n",
+    "END_DATE=os.getenv('END_DATE')\n",
+    "AOI=os.getenv('AOI')\n",
     "\n",
-    "SENTINEL2_GOOGLE_API_KEY=os.getenv('SENTINEL2_GOOGLE_API_KEY', 'sentinel2_google_api_key.json')\n",
-    "SATELLITE_CACHE_FOLDER=os.getenv('SENTINEL2_CACHE', 'cache')\n",
-    "OUTPUT_FOLDER=os.getenv('OUTPUT_FOLDER', 'output')"
+    "SENTINEL2_GOOGLE_API_KEY=os.getenv('SENTINEL2_GOOGLE_API_KEY')\n",
+    "SATELLITE_CACHE_FOLDER=os.getenv('SENTINEL2_CACHE')\n",
+    "OUTPUT_FOLDER=os.getenv('OUTPUT_FOLDER')"
    ]
   },
   {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00d27875",
+   "id": "5a836a49",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-11-12T16:40:09.480068Z",
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c835dc2",
+   "id": "6149bf68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27c0f56",
+   "id": "33c4d8dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a9fe808",
+   "id": "4db7c246",
    "metadata": {},
    "outputs": [],
    "source": [
