[22445] changed crop flag in nodata validation

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -304,7 +304,7 @@
     "                                 nodata=0):\n",
     "        with rasterio.open(tile_path) as src:\n",
     "            polygon = aoi.to_crs(src.meta['crs']).geometry[0]\n",
-    "            out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True)\n",
+    "            out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True, filled=False)\n",
     "            band = out_image[0]\n",
     "            nodata_count = np.count_nonzero(band == nodata)\n",
     "            nodata_percentage = round(nodata_count / band.size * 100, 2)\n",
