--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "34e24b5c",
    "metadata": {
@@ -72,6 +73,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d045887",
    "metadata": {
@@ -122,6 +124,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "756c10e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "REQUEST_ID=1\n",
+    "START_DATE=\"2023-06-03\"\n",
+    "END_DATE=\"2023-06-03\"\n",
+    "AOI=\"POLYGON ((32.111389 46.403029, 32.451965 46.740177, 33.453369 46.875605, 33.514893 46.678868, 33.174316 46.3818, 32.111389 46.403029))\"\n",
+    "\n",
+    "SENTINEL2_GOOGLE_API_KEY=\"/workspaces/geoap/sentinel2_google_api_key.json\"\n",
+    "SATELLITE_CACHE_FOLDER=\"/workspaces/geoap/data/satellite_imagery\"\n",
+    "OUTPUT_FOLDER=\"/workspaces/geoap/data/results\""
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51789533",
    "metadata": {
@@ -162,10 +182,11 @@
    "source": [
     "aoi = gp.GeoDataFrame(geometry=[wkt.loads(AOI)], crs=\"epsg:4326\")\n",
     "aoi_filename = \"provided_aoi.geojson\"\n",
-    "aoi.to_file(aoi_filename, driver=\"GeoJSON\") "
+    "aoi.to_file(aoi_filename, driver=\"GeoJSON\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3d301cb7",
    "metadata": {
@@ -194,6 +215,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fb64ebec",
    "metadata": {
@@ -236,12 +258,12 @@
     "\n",
     "NODATA = 0 \n",
     "NODATA_PIXEL_PERCENTAGE = 10.0\n",
-    "CLOUDY_PIXEL_PERCENTAGE = 15.0\n",
+    "SEARCH_CLOUDY_PIXEL_PERCENTAGE = 80.0\n",
+    "AOI_CLOUDY_PIXEL_PERCENTAGE = 15.0\n",
     "\n",
     "PRODUCT_TYPE = 'L2A'\n",
-    "BANDS = {'TCI', 'B04', 'B08', }\n",
-    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': NODATA_PIXEL_PERCENTAGE, \n",
-    "               'CLOUDY_PIXEL_PERCENTAGE': CLOUDY_PIXEL_PERCENTAGE, }\n",
+    "BANDS = {'TCI', 'B04', 'B08', 'CLD'}\n",
+    "CONSTRAINTS = {'CLOUDY_PIXEL_PERCENTAGE': SEARCH_CLOUDY_PIXEL_PERCENTAGE}\n",
     "\n",
     "LAYERS = ['TCI', 'NDVI', ]"
    ]
@@ -275,6 +297,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "19a6ca5c",
    "metadata": {
@@ -300,18 +323,51 @@
    "source": [
     "def check_nodata_percentage_crop(tile_path, \n",
     "                                 aoi, \n",
-    "                                 nodata_percentage_limit=5, \n",
-    "                                 nodata=0):\n",
-    "        with rasterio.open(tile_path) as src:\n",
-    "            polygon = aoi.to_crs(src.meta['crs']).geometry[0]\n",
-    "            out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True, filled=False)\n",
-    "            band = out_image[0]\n",
-    "            nodata_count = np.count_nonzero(band == nodata)\n",
-    "            nodata_percentage = round(nodata_count / band.size * 100, 2)\n",
-    "        if nodata_percentage>=nodata_percentage_limit:\n",
-    "            return True\n",
+    "                                 nodata_percentage_limit, \n",
+    "                                 nodata):\n",
+    "    with rasterio.open(tile_path) as src:\n",
+    "        polygon = aoi.to_crs(src.meta['crs']).geometry[0]\n",
+    "        band, _ = rasterio.mask.mask(src, [polygon], crop=True, filled=False, indexes=1)\n",
+    "        masked_band = band[~band.mask]\n",
+    "        nodata_count = np.count_nonzero(masked_band == nodata)\n",
+    "        nodata_percentage = round(nodata_count / masked_band.size * 100, 2)\n",
+    "    if nodata_percentage>=nodata_percentage_limit:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def check_cloud_percentage_crop(tile_path, \n",
+    "                                aoi, \n",
+    "                                cloud_percentage_limit,\n",
+    "                                cloud_probability=50):\n",
+    "    with rasterio.open(tile_path) as src:\n",
+    "        polygon = aoi.to_crs(src.meta['crs']).geometry[0]\n",
+    "        band, _ = rasterio.mask.mask(src, [polygon], crop=True, filled=False, indexes=1)\n",
+    "        masked_band = band[~band.mask]\n",
+    "        cloud_count = np.count_nonzero(masked_band >= cloud_probability)\n",
+    "        cloud_percentage = round(cloud_count / masked_band.size * 100, 2)\n",
+    "    if cloud_percentage>=cloud_percentage_limit:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def check_tile_validity(tile_folder, aoi):\n",
+    "    band_paths = [os.path.join(tile_folder, i) for i in os.listdir(tile_folder)]\n",
+    "    skip_tile = False\n",
+    "    for band_path in band_paths:\n",
+    "        if  '.jp2' != Path(band_path).suffix:\n",
+    "            continue\n",
+    "        if \"MSK_CLDPRB_20m\" in band_path:\n",
+    "            cloud_check = check_cloud_percentage_crop(band_path, aoi, AOI_CLOUDY_PIXEL_PERCENTAGE)\n",
+    "            if cloud_check:\n",
+    "                skip_tile=True\n",
+    "                break\n",
     "        else:\n",
-    "            return False"
+    "            nodata_check = check_nodata_percentage_crop(band_path, aoi, NODATA_PIXEL_PERCENTAGE, NODATA)\n",
+    "            if nodata_check:\n",
+    "                skip_tile=True\n",
+    "                break\n",
+    "    return skip_tile, band_paths\n"
    ]
   },
   {
@@ -339,7 +395,7 @@
     "def load_images(tiles, start_date, end_date, aoi):\n",
     "    loader = Sentinel2Downloader(SENTINEL2_GOOGLE_API_KEY)\n",
     "    loadings = dict()\n",
-    "        \n",
+    "\n",
     "    for tile in tiles:\n",
     "        print(f\"Loading images for tile: {tile}...\")\n",
     "        loaded = loader.download(PRODUCT_TYPE,\n",
@@ -349,42 +405,22 @@
     "                            output_dir=LOAD_DIR,                       \n",
     "                            bands=BANDS,\n",
     "                            constraints=CONSTRAINTS)\n",
-    "        \n",
     "        loaded_tile_folders = set([Path(i[0]).parent for i in loaded])\n",
+    "        band_paths = []\n",
     "        if not loaded:\n",
     "            print(f\"Images for tile {tile} were not loaded!\")\n",
     "            continue\n",
     "        else:\n",
-    "            remaining_tiles = []\n",
     "            for loaded_tile_folder in loaded_tile_folders:\n",
-    "                skip_tile = False\n",
-    "                band_paths = [os.path.join(loaded_tile_folder, i) for i in os.listdir(loaded_tile_folder)]\n",
-    "                for band_path in band_paths:\n",
-    "                    if  '.jp2' != Path(band_path).suffix:\n",
-    "                        continue\n",
-    "                    nodata_band = check_nodata_percentage_crop(band_path, \n",
-    "                                                               aoi,\n",
-    "                                                               nodata_percentage_limit=NODATA_PIXEL_PERCENTAGE,\n",
-    "                                                               nodata=NODATA)\n",
-    "                    if nodata_band:\n",
-    "                        skip_tile = True\n",
+    "                skip_tile, band_paths = check_tile_validity(loaded_tile_folder, aoi)\n",
     "                if skip_tile:\n",
-    "                    for band_path in band_paths:\n",
-    "                        os.remove(band_path)\n",
-    "                    os.rmdir(loaded_tile_folder) \n",
-    "                else:\n",
-    "                    remaining_tiles += band_paths\n",
-    "        \n",
-    "        if remaining_tiles:\n",
-    "            loadings[tile] = remaining_tiles\n",
+    "                    band_paths = []\n",
+    "                    shutil.rmtree(loaded_tile_folder)\n",
+    "        if band_paths:\n",
+    "            loadings[tile] = band_paths\n",
     "            print(f\"Loading images for tile {tile} finished\")\n",
     "        else:\n",
-    "            print(f\"All downlaoded images have a lot of nodata in AOI, so they were removed!\")\n",
-    "            \n",
-    "        \n",
-    "    # tile_folders = dict()\n",
-    "    # for tile, tile_paths in loadings.items():\n",
-    "    #    tile_folders[tile] = {str(Path(tile_path[0]).parent) for tile_path in tile_paths}\n",
+    "            print(f\"Tile images didn't match nodata/cloud constraints, so they were removed\")\n",
     "    return loadings"
    ]
   },
@@ -399,16 +435,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4db7c246",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loadings"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "12ac6732",
    "metadata": {
@@ -504,6 +531,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cefc02d7",
    "metadata": {
@@ -545,11 +573,11 @@
     "TEMP_DIR = \"/temp\"\n",
     "os.makedirs(TEMP_DIR, exist_ok=True)\n",
     "\n",
-    "# NOTEBOOK_DIR = os.path.join(BASE, \"notebooks/example/tci_ndvi\")\n",
     "COLORMAP_BRBG = os.path.join(\"/code\", \"ndvi_colormap.npy\") "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c07232b5",
    "metadata": {
@@ -819,7 +847,6 @@
    "outputs": [],
    "source": [
     "def to_crs(poly, target, current='EPSG:4326'):\n",
-    "    # print(f\"TARGET CRS: {target}\")\n",
     "    project = pyproj.Transformer.from_crs(pyproj.CRS(current), pyproj.CRS(target), always_xy=True).transform\n",
     "    transformed_poly = transform(project, poly)\n",
     "    return transformed_poly "
@@ -850,7 +877,6 @@
     "def crop(input_path, output_path, polygon, date, name=None, colormap=None):\n",
     "    with rasterio.open(input_path) as src:\n",
     "        out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True)\n",
-    "        # print(out_transform)\n",
     "        out_meta = src.meta\n",
     "\n",
     "        out_meta.update(driver='GTiff',\n",
@@ -1021,7 +1047,7 @@
    },
    "outputs": [],
    "source": [
-    "def dump_no_data_geosjon(polygon, geojson_path):\n",
+    "def dump_no_data_geojson(polygon, geojson_path):\n",
     "    NO_DATA = 'No data'\n",
     "    TCI_NDVI_NO_DATA = 'TCI_NDVI\\nNo data available'\n",
     "    style = dict(color='red')\n",
@@ -1035,6 +1061,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "77977f03",
    "metadata": {
@@ -1077,7 +1104,7 @@
    "source": [
     "if not filtered:\n",
     "    geojson_path = os.path.join(OUTPUT_FOLDER, \"aoi.geojson\")\n",
-    "    dump_no_data_geosjon(aoi.geometry[0], geojson_path)    \n",
+    "    dump_no_data_geojson(aoi.geometry[0], geojson_path)    \n",
     "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
     "\n",
     "\n",
@@ -1089,7 +1116,7 @@
     "    if not tile in filtered:\n",
     "        tile_geojson_path = os.path.join(OUTPUT_FOLDER, \"%s_aoi.geojson\" % tile)\n",
     "        print(\"No data loaded for tile\", tile)\n",
-    "        dump_no_data_geosjon(polygon, tile_geojson_path)    \n",
+    "        dump_no_data_geojson(polygon, tile_geojson_path)    \n",
     "    \n",
     "    try:\n",
     "        paths = filtered[tile]['paths']\n",
@@ -1128,14 +1155,6 @@
     "        os.remove(tci_images[i])\n",
     "        os.remove(ndvi_images[i])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2725df7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
