Better parameters for check_tile_validity function

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -330,19 +330,19 @@
     "    else:\n",
     "        return False\n",
     "\n",
-    "def check_tile_validity(tile_folder, aoi):\n",
+    "def check_tile_validity(tile_folder, aoi, cloud_percentage_limit, nodata_percentage_limit):\n",
     "    band_paths = [os.path.join(tile_folder, i) for i in os.listdir(tile_folder)]\n",
     "    skip_tile = False\n",
     "    for band_path in band_paths:\n",
     "        if  '.jp2' != Path(band_path).suffix:\n",
     "            continue\n",
     "        if \"MSK_CLDPRB_20m\" in band_path:\n",
-    "            cloud_check = check_cloud_percentage_crop(band_path, aoi, AOI_CLOUDY_PIXEL_PERCENTAGE)\n",
+    "            cloud_check = check_cloud_percentage_crop(band_path, aoi, cloud_percentage_limit)\n",
     "            if cloud_check:\n",
     "                skip_tile=True\n",
     "                break\n",
     "        else:\n",
-    "            nodata_check = check_nodata_percentage_crop(band_path, aoi, NODATA_PIXEL_PERCENTAGE, NODATA)\n",
+    "            nodata_check = check_nodata_percentage_crop(band_path, aoi, nodata_percentage_limit, NODATA)\n",
     "            if nodata_check:\n",
     "                skip_tile=True\n",
     "                break\n",
@@ -391,7 +391,7 @@
     "            continue\n",
     "        else:\n",
     "            for loaded_tile_folder in loaded_tile_folders:\n",
-    "                skip_tile, band_paths = check_tile_validity(loaded_tile_folder, aoi)\n",
+    "                skip_tile, band_paths = check_tile_validity(loaded_tile_folder, aoi, AOI_CLOUDY_PIXEL_PERCENTAGE, NODATA_PIXEL_PERCENTAGE)\n",
     "                if skip_tile:\n",
     "                    band_paths = []\n",
     "                    shutil.rmtree(loaded_tile_folder)\n",
