22878. Move validation code into a separate function that can be later reused

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "\n",
     "from pathlib import Path\n",
-    "from datetime import datetime, timedelta\n",
+    "from datetime import datetime\n",
     "from sentinel2download.downloader import Sentinel2Downloader\n",
     "from sentinel2download.overlap import Sentinel2Overlap"
    ]
@@ -237,7 +237,7 @@
     "\n",
     "NODATA = 0 \n",
     "NODATA_PIXEL_PERCENTAGE = 10.0\n",
-    "SEARCH_CLOUDY_PIXEL_PERCENTAGE = 80.0\n",
+    "SEARCH_CLOUDY_PIXEL_PERCENTAGE = 50.0\n",
     "AOI_CLOUDY_PIXEL_PERCENTAGE = 15.0\n",
     "\n",
     "PRODUCT_TYPE = 'L2A'\n",
@@ -245,34 +245,6 @@
     "CONSTRAINTS = {'CLOUDY_PIXEL_PERCENTAGE': SEARCH_CLOUDY_PIXEL_PERCENTAGE}\n",
     "\n",
     "LAYERS = ['TCI', 'NDVI', ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "071061f6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:26.365193Z",
-     "iopub.status.busy": "2022-11-12T16:40:26.364583Z",
-     "iopub.status.idle": "2022-11-12T16:40:26.373369Z",
-     "shell.execute_reply": "2022-11-12T16:40:26.371634Z"
-    },
-    "papermill": {
-     "duration": 0.03756,
-     "end_time": "2022-11-12T16:40:26.377876",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:26.340316",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def shift_date(date, delta=5, format='%Y-%m-%d'):\n",
-    "    date = datetime.strptime(date, format)\n",
-    "    date = date + timedelta(days=delta)    \n",
-    "    return datetime.strftime(date, format)"
    ]
   },
   {
@@ -290,7 +262,7 @@
     "tags": []
    },
    "source": [
-    "#### 3.1 Define max shift in dates - 30 days for loading images"
+    "#### 3.1 Check whether downloaded tiles match constraints"
    ]
   },
   {
@@ -346,7 +318,27 @@
     "            if nodata_check:\n",
     "                skip_tile=True\n",
     "                break\n",
-    "    return skip_tile, band_paths\n"
+    "    return skip_tile, band_paths\n",
+    "\n",
+    "def validate_tile_downloads(loaded, tile, loadings, aoi, cloud_percentage_limit, nodata_percentage_limit):\n",
+    "    print(f\"Validating images for tile: {tile}...\")\n",
+    "    if not loaded:\n",
+    "        print(f\"Images for tile {tile} were not loaded!\")\n",
+    "        return loadings\n",
+    "    loaded_tile_folders = set([Path(i[0]).parent for i in loaded])\n",
+    "    tile_bands = []\n",
+    "    for loaded_tile_folder in loaded_tile_folders:\n",
+    "        skip_tile, band_paths = check_tile_validity(loaded_tile_folder, aoi, cloud_percentage_limit, nodata_percentage_limit)\n",
+    "        if skip_tile:\n",
+    "            shutil.rmtree(loaded_tile_folder)\n",
+    "        else:\n",
+    "            tile_bands += band_paths\n",
+    "    if tile_bands:\n",
+    "        loadings[tile] = tile_bands\n",
+    "    else:\n",
+    "        print(f\"Tile images didn't match nodata/cloud constraints, so they were removed\") \n",
+    "    print(f\"Validating images for tile {tile} finished\")  \n",
+    "    return loadings\n"
    ]
   },
   {
@@ -381,25 +373,11 @@
     "                            [tile],\n",
     "                            start_date=start_date,\n",
     "                            end_date=end_date,\n",
-    "                            output_dir=LOAD_DIR,                       \n",
+    "                            output_dir=LOAD_DIR,               \n",
     "                            bands=BANDS,\n",
     "                            constraints=CONSTRAINTS)\n",
-    "        loaded_tile_folders = set([Path(i[0]).parent for i in loaded])\n",
-    "        band_paths = []\n",
-    "        if not loaded:\n",
-    "            print(f\"Images for tile {tile} were not loaded!\")\n",
-    "            continue\n",
-    "        else:\n",
-    "            for loaded_tile_folder in loaded_tile_folders:\n",
-    "                skip_tile, band_paths = check_tile_validity(loaded_tile_folder, aoi, AOI_CLOUDY_PIXEL_PERCENTAGE, NODATA_PIXEL_PERCENTAGE)\n",
-    "                if skip_tile:\n",
-    "                    band_paths = []\n",
-    "                    shutil.rmtree(loaded_tile_folder)\n",
-    "        if band_paths:\n",
-    "            loadings[tile] = band_paths\n",
-    "            print(f\"Loading images for tile {tile} finished\")\n",
-    "        else:\n",
-    "            print(f\"Tile images didn't match nodata/cloud constraints, so they were removed\")\n",
+    "        print(f\"Loading images for tile {tile} finished\")\n",
+    "        loadings = validate_tile_downloads(loaded, tile, loadings, aoi, AOI_CLOUDY_PIXEL_PERCENTAGE, NODATA_PIXEL_PERCENTAGE)\n",
     "    return loadings"
    ]
   },
@@ -410,7 +388,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loadings = load_images(overlap_tiles.Name.values, START_DATE, END_DATE, aoi)\n"
+    "loadings = load_images(overlap_tiles.Name.values, START_DATE, END_DATE, aoi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468d0274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loadings"
    ]
   },
   {
@@ -507,6 +495,16 @@
    "outputs": [],
    "source": [
     "filtered = filter_by_date(loadings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1588092c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered"
    ]
   },
   {
