23241. Change names for output rasters

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -1126,8 +1126,8 @@
     "\n",
     "if tci_images:\n",
     "    base_filename = f\"{REQUEST_ID}_{'-'.join(filtered.keys())}_{acquired_date}\"\n",
-    "    tci_full = stitch_tiles(tci_images, os.path.join(OUTPUT_FOLDER, base_filename + \"_TCI.tif\"), acquired_date,  name=\"Sentinel-2 RGB raster\")\n",
-    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(OUTPUT_FOLDER, base_filename + \"_NDVI.tif\"), acquired_date, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
+    "    tci_full = stitch_tiles(tci_images, os.path.join(OUTPUT_FOLDER, base_filename + \"_TCI.tif\"), acquired_date,  name=\"Vegetation Index RGB\")\n",
+    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(OUTPUT_FOLDER, base_filename + \"_NDVI.tif\"), acquired_date, name=\"Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
     "    for i in range(len(tci_images)):\n",
     "        os.remove(tci_images[i])\n",
     "        os.remove(ndvi_images[i])"
